# auto-agent

./: .env.example  .gitignore  .mcp.json  .plan.md  .pre-commit-config.yaml  .venv  CLAUDE.md  Dockerfile  README.md  SETUP.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
.auto-agent/: entropy.yml
agent/: __init__.py  architect_analyzer.py  classifier.py  conflict_resolver.py  graph_workspace.py  harness.py  improvement_agent.py  loop.py  main.py  market_researcher.py  mcp_memory_server.py  memory_extractor.py  po_agent.py  po_analyzer.py  po_graph_findings.py  prompts.py  search_loop.py  search_title.py  session.py  sh.py  slack_assistant.py  workspace.py
claude_runner/: harness.py  main.py  po_analyzer.py  prompts.py  summarizer.py  workspace.py
eval/: .gitignore  GRAPH_EVAL_RESULTS.md  NEXT_ITERATION.md  README.md  analyze_graph_eval.py  promptfooconfig-graph.yaml  promptfooconfig.yaml  smoke_results.json
migrations/: env.py
orchestrator/: auth.py  ci_extractor.py  ci_handler.py  classifier.py  claude_auth.py  claude_pairing.py  create_repo.py  deduplicator.py  feedback.py  freeform.py  graph_freshness.py  main.py  metrics.py  orgs.py  queue.py  reconciler.py  repo_sync.py  router.py  scheduler.py  scoping.py  search.py  state_machine.py  unblock.py  usage.py
scripts/: auth.sh  check-inline-js.sh  demo_flow_blob.py  deploy.sh  gen_ts_types.py
shared/: config.py  database.py  email.py  env_filter.py  events.py  github_auth.py  installation_crypto.py  logging.py  memory_client.py  memory_io.py  models.py  notifier.py  preflight.py  pricing.py  quotas.py  redis_client.py  repo_secrets.py  secrets.py  task_channel.py  types.py
tests/: conftest.py  db_guard.py  helpers.py  test_adr019_repo_id_wiring.py  test_adr_consistency.py  test_adr_index.py  test_adr_supersede.py  test_agent_classifier.py  test_agent_provider_output.py  test_agent_secret_tools.py  test_anthropic_mapper.py  test_api_message_batching.py  test_approve_plan_endpoint.py  test_architect_checkpoint.py  test_architect_consult.py  test_architect_decision_skill.py  test_architect_design_gate.py  test_architect_emit_clarification.py  test_architect_extractors.py  test_architect_factory.py  test_architect_gap_fix.py  test_architect_journal.py  test_architect_resume.py  test_architect_resume_drives_builder_loop.py  test_architect_run_initial.py  test_architect_scope_guardian.py  test_architect_session_pin.py  test_architecture_mode.py  test_auth.py  (+359 more)
(+662 files in other folders)
