[project]
name = "auto-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "slack-bolt>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
]
