[project]
name = "auto-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "slack-bolt>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "team-memory",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "testcontainers[postgres]>=4.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins shadowing
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "orchestrator", "claude_runner", "integrations", "web"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["E", "F", "I", "N", "UP"]  # Auto-generated migration files

[tool.uv.sources]
team-memory = { git = "https://github.com/ergodic-ai/team-memory.git", branch = "main" }
